[project]
name = "claude-dot-ai-share-scraper"
version = "0.1.0"
description = "Download and parse Claude.ai share URLs into markdown files with human-readable cache hierarchy"
readme = "README.md"
authors = [
    { name = "dp", email = "durapensa@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
    "cloudscraper>=1.2.71",
    "seleniumbase>=4.30.0",
    "undetected-chromedriver>=3.5.5",
    "pygments>=2.15.0",
]
keywords = ["claude", "ai", "scraper", "markdown", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/durapensa/claude-dot-ai-share-scraper"
Issues = "https://github.com/durapensa/claude-dot-ai-share-scraper/issues"

[project.scripts]
claude-scraper = "claude_dot_ai_share_scraper.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
